// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Homework Row renders with completed count 1`] = `
<a
  aria-label="Work on homework: Chapter 6 Homework Before Due, no feedback"
  className="task row homework"
  data-event-id="6"
  href="/course/1/task/6"
  onClick={[Function]}
  onKeyDown={undefined}
  tabIndex={-1}
>
  <div
    className="column-icon col-sm-1 col-xs-2"
  >
    <i
      aria-label="homework icon"
      className="icon icon-lg icon-homework"
    />
  </div>
  <div
    className="title col-sm-6 col-xs-10"
  >
    Chapter 6 Homework Before Due, no feedback
  </div>
  <div
    className="feedback col-sm-3 col-xs-5"
  >
    <span>
      0/2 answered
    </span>
    <i
      className="info late"
      onBlur={[Function]}
      onClick={null}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
    />
  </div>
  <div
    className="due-at col-sm-2 col-xs-5"
  >
    <time>
      Apr 24, 7:45pm
    </time>
  </div>
</a>
`;

exports[`Homework Row renders with correct count 1`] = `
<a
  aria-label="Work on homework: Chapter 6 Homework Before Due, no feedback"
  className="task row homework"
  data-event-id="6"
  href="/course/1/task/6"
  onClick={[Function]}
  onKeyDown={undefined}
  tabIndex={-1}
>
  <div
    className="column-icon col-sm-1 col-xs-2"
  >
    <i
      aria-label="homework icon"
      className="icon icon-lg icon-homework"
    />
  </div>
  <div
    className="title col-sm-6 col-xs-10"
  >
    Chapter 6 Homework Before Due, no feedback
  </div>
  <div
    className="feedback col-sm-3 col-xs-5"
  >
    <span>
      0/2 correct
    </span>
    <i
      className="info late"
      onBlur={[Function]}
      onClick={null}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
    />
  </div>
  <div
    className="due-at col-sm-2 col-xs-5"
  >
    <time>
      Apr 24, 7:45pm
    </time>
  </div>
</a>
`;

exports[`Homework Row renders with correct count 2`] = `
<a
  aria-label="Work on homework: Chapter 6 Homework Before Due, no feedback"
  className="task row homework"
  data-event-id="6"
  href="/course/1/task/6"
  onClick={[Function]}
  onKeyDown={undefined}
  tabIndex={-1}
>
  <div
    className="column-icon col-sm-1 col-xs-2"
  >
    <i
      aria-label="homework icon"
      className="icon icon-lg icon-homework"
    />
  </div>
  <div
    className="title col-sm-6 col-xs-10"
  >
    Chapter 6 Homework Before Due, no feedback
  </div>
  <div
    className="feedback col-sm-3 col-xs-5"
  >
    <span>
      2/2 correct
    </span>
    <i
      className="info late"
      onBlur={[Function]}
      onClick={null}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
    />
  </div>
  <div
    className="due-at col-sm-2 col-xs-5"
  >
    <time>
      Apr 24, 7:45pm
    </time>
  </div>
</a>
`;
